Update index.html to English version

--- a/website/index.html
+++ b/website/index.html
@@ -1,135 +1,119 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>澄域 - 正念冥想，回归当下</title>
+    <title>Lumea - Mindfulness Meditation, Return to the Present</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.jpeg" alt="澄域" class="logo">
-            <h1>澄域</h1>
-            <p class="tagline">正念冥想，回归当下</p>
+            <img src="logo.jpeg" alt="Lumea" class="logo">
+            <h1>Lumea</h1>
+            <p class="tagline">Mindfulness Meditation, Return to the Present</p>
         </header>
 
         <main>
-            <!-- 品牌故事 -->
+            <!-- Brand Story -->
             <section class="story">
                 <div class="story-item">
                     <div class="story-number">01</div>
-                    <h2>我们看到的问题</h2>
-                    <p>在这个信息爆炸的时代，我们的注意力被无数应用争夺。短视频、社交媒体、即时消息……它们设计精巧，让人欲罢不能。</p>
-                    <p>我们发现自己越来越难以专注，越来越焦虑不安。大脑在高多巴胺刺激下疲惫不堪，心理稳定性逐渐瓦解。</p>
+                    <h2>The Problem We See</h2>
+                    <p>In this age of information overload, our attention is constantly fought over by countless apps. Short videos, social media, instant messaging... they're meticulously designed to be irresistible.</p>
+                    <p>We find ourselves increasingly unable to focus, increasingly anxious. Our brains are exhausted from high dopamine stimulation, and our psychological stability gradually crumbles.</p>
                 </div>
 
                 <div class="story-item">
                     <div class="story-number">02</div>
-                    <h2>我们的思考</h2>
-                    <p>问题不在于技术本身，而在于我们失去了与自己内心的连接。</p>
-                    <p>我们需要一个"锚点"，一个能让我们回归当下、重建心理稳定的工具。不是逃避数字世界，而是在其中找到平衡。</p>
+                    <h2>Our Thinking</h2>
+                    <p>The problem isn't technology itself, but that we've lost connection with our inner selves.</p>
+                    <p>We need an "anchor," a tool that can help us return to the present and rebuild psychological stability. Not to escape the digital world, but to find balance within it.</p>
                 </div>
 
                 <div class="story-item">
                     <div class="story-number">03</div>
-                    <h2>澄域的诞生</h2>
-                    <p>澄域，意为"澄净的心灵领域"。</p>
-                    <p>我们创造了一个流体光影球，它随你的心智状态而变化——当你稳定时，它平静呼吸；当你焦虑时，它剧烈波动。这是你内心的镜子。</p>
-                    <p>通过四种正念练习，你可以逐步建立心理稳定，对抗认知负荷，重新掌控自己的注意力。</p>
+                    <h2>The Birth of Lumea</h2>
+                    <p>Lumea means "a clear realm of the mind."</p>
+                    <p>We've created a fluid light sphere that changes with your mental state—when you're stable, it breathes calmly; when you're anxious, it fluctuates violently. It's a mirror of your inner self.</p>
+                    <p>Through four mindfulness practices, you can gradually build psychological stability, combat cognitive load, and regain control of your attention.</p>
                 </div>
 
                 <div class="story-item">
                     <div class="story-number">04</div>
-                    <h2>我们的使命</h2>
-                    <p>帮助每个人在数字时代找到内心的平静与力量。</p>
-                    <p>不是让你放弃手机，而是让你成为自己注意力的主人。</p>
+                    <h2>Our Mission</h2>
+                    <p>To help everyone find inner peace and strength in the digital age.</p>
+                    <p>Not to make you give up your phone, but to make you the master of your own attention.</p>
                 </div>
             </section>
 
-            <!-- 应用预览 -->
-            <section class="screenshots">
-                <h2>应用预览</h2>
-                <div class="screenshot-grid">
-                    <div class="screenshot-item">
-                        <img src="功能介绍/冥想.png" alt="冥想练习">
-                        <p>冥想练习</p>
-                    </div>
-                    <div class="screenshot-item">
-                        <img src="功能介绍/觉察.png" alt="正念觉察">
-                        <p>正念觉察</p>
-                    </div>
-                    <div class="screenshot-item">
-                        <img src="功能介绍/具象.png" alt="心智具象">
-                        <p>心智具象</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- 核心理念 -->
-            <section class="philosophy">
-                <h2>核心理念</h2>
-                <div class="philosophy-grid">
-                    <div class="philosophy-item">
-                        <h3>可视化你的心智状态</h3>
-                        <p>流体光影球实时反映你的稳定值和认知负荷，让抽象的心理状态变得具象可感。</p>
-                    </div>
-                    <div class="philosophy-item">
-                        <h3>量化认知负荷</h3>
-                        <p>追踪高多巴胺应用的使用时长，计算认知负荷指数，帮你了解大脑的真实状态。</p>
-                    </div>
-                    <div class="philosophy-item">
-                        <h3>建立心理稳定</h3>
-                        <p>通过每日正念练习，逐步积累稳定值，对抗数字时代的焦虑与分散。</p>
-                    </div>
-                    <div class="philosophy-item">
-                        <h3>回归当下此刻</h3>
-                        <p>不是逃避，而是觉察。在每一次练习中，重新连接自己的身体、呼吸和情绪。</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- 四种练习 -->
+            <!-- App Preview -->
             <section class="features">
-                <h2>四种正念练习</h2>
+                <h2>Core Features</h2>
+                
                 <div class="feature-grid">
-                    <div class="feature">
-                        <h3>🧘 澄域冥想</h3>
-                        <p>通过呼吸和音乐进入专注状态，每分钟积累稳定值，建立内心的平静基础。</p>
+                    <div class="feature-card">
+                        <div class="feature-icon">🧘</div>
+                        <h3>Meditation Practice</h3>
+                        <p>Guided meditation with soothing music to help you find inner peace</p>
                     </div>
-                    <div class="feature">
-                        <h3>✋ 触感锚点</h3>
-                        <p>触摸光球，感受当下。用身体的感知打断思维的漩涡，回到此时此地。</p>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">🎯</div>
+                        <h3>Touch Anchor</h3>
+                        <p>Rebuild sensory connection through touch, resist impulse</p>
                     </div>
-                    <div class="feature">
-                        <h3>📖 心流铸核</h3>
-                        <p>专注阅读练习，对抗碎片化信息。在深度思考中重建注意力的核心。</p>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">⚡</div>
+                        <h3>Flow Forging</h3>
+                        <p>Deep focus practice to restore attention and thinking ability</p>
                     </div>
-                    <div class="feature">
-                        <h3>🎤 情绪光解</h3>
-                        <p>用声音记录情绪，让压抑的感受流动起来。说出来，就是释放的开始。</p>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">💫</div>
+                        <h3>Emotion Photolysis</h3>
+                        <p>Visualize and release emotional burden, achieve psychological separation</p>
+                    </div>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">📊</div>
+                        <h3>Stability Tracking</h3>
+                        <p>Real-time tracking of your psychological stability value</p>
+                    </div>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">🧠</div>
+                        <h3>Cognitive Load Index</h3>
+                        <p>Quantify the impact of digital distractions on your mental state</p>
                     </div>
                 </div>
             </section>
 
+            <!-- Download -->
             <section class="download">
-                <h2>立即下载</h2>
-                <p>即将在 App Store 上架</p>
+                <h2>Download Lumea</h2>
+                <p>Available on iOS, start your mindfulness journey</p>
+                <a href="https://apps.apple.com/app/lumea" class="download-button" target="_blank">
+                    <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" alt="Download on the App Store">
+                </a>
             </section>
 
+            <!-- Contact -->
             <section class="contact">
-                <h2>联系我们</h2>
-                <p>邮箱：<a href="mailto:support@chengyu.space">support@chengyu.space</a></p>
+                <h2>Contact Us</h2>
+                <p>Questions or suggestions? We'd love to hear from you</p>
+                <p>Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
             </section>
         </main>
 
         <footer>
             <nav>
-                <a href="privacy.html">隐私政策</a>
+                <a href="privacy.html">Privacy Policy</a>
                 <span>·</span>
-                <a href="terms.html">用户协议</a>
+                <a href="terms.html">Terms of Service</a>
             </nav>
-            <p class="copyright">© 2025 澄域. All rights reserved.</p>
+            <p class="copyright">© 2025 Lumea. All rights reserved.</p>
         </footer>
     </div>
 </body>
