Complete website rebuild: Pure English version with no Chinese content

--- a/website/privacy.html
+++ b/website/privacy.html
@@ -11,13 +11,12 @@
         <a href="index.html" class="back-link">← Back to Home</a>
         
         <div class="doc-header">
-            <img src="logo.jpeg" alt="Lumea" class="doc-logo">
             <h1>Privacy Policy</h1>
-            <p class="update-date">Last Updated: November 29, 2025</p>
+            <p class="update-date">Last Updated: December 1, 2025</p>
         </div>
 
         <div class="doc-content">
-            <p>Welcome to Lumea (hereinafter referred to as "we" or "the App"). We take your privacy protection and personal information security very seriously. This Privacy Policy will help you understand how we collect, use, store, and protect your personal information.</p>
+            <p>Welcome to Lumea. We take your privacy protection and personal information security very seriously. This Privacy Policy explains how we collect, use, store, and protect your personal information.</p>
 
             <h2>1. Information Collection</h2>
             
@@ -95,15 +94,11 @@
             <h2>9. Privacy Policy Updates</h2>
             <p>We may update this Privacy Policy from time to time. The updated policy will be published in the app and on the website, with the update date noted. For significant changes, we will notify you through in-app notifications.</p>
 
-            <h2>10. Developer Information</h2>
-            <p>App Developer: Lumea Team</p>
-            <p>Contact Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
-
-            <h2>11. Contact Us</h2>
+            <h2>10. Contact Us</h2>
             <p>If you have any questions, comments, or suggestions about this Privacy Policy, please contact us:</p>
             <p>Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
 
-            <h2>12. Governing Law</h2>
+            <h2>11. Governing Law</h2>
             <p>This Privacy Policy is governed by the laws of the United States of America.</p>
         </div>
 
