--- a/website/terms.html
+++ b/website/terms.html
@@ -11,13 +11,12 @@
         <a href="index.html" class="back-link">← Back to Home</a>
         
         <div class="doc-header">
-            <img src="logo.jpeg" alt="Lumea" class="doc-logo">
             <h1>Terms of Service</h1>
-            <p class="update-date">Last Updated: November 29, 2025</p>
+            <p class="update-date">Last Updated: December 1, 2025</p>
         </div>
 
         <div class="doc-content">
-            <p>Welcome to Lumea! Before using this app, please read these Terms of Service (hereinafter referred to as "these Terms") carefully. By using this app, you agree to accept all terms of these Terms.</p>
+            <p>Welcome to Lumea! Before using this app, please read these Terms of Service carefully. By using this app, you agree to accept all terms of these Terms.</p>
 
             <h2>1. Service Description</h2>
             <p>Lumea is a mindfulness meditation app that provides the following services:</p>
@@ -117,23 +116,19 @@
             <h3>10.2 Dispute Resolution</h3>
             <p>Any disputes arising from these Terms shall first be resolved through friendly negotiation. If negotiation fails, either party may file a lawsuit in a court with jurisdiction in our location.</p>
 
-            <h2>11. Developer Information</h2>
-            <p>App Developer: Lumea Team</p>
-            <p>Contact Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
-
-            <h2>12. Contact Us</h2>
+            <h2>11. Contact Us</h2>
             <p>If you have any questions about these Terms, please contact us:</p>
             <p>Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
 
-            <h2>13. Other Terms</h2>
+            <h2>12. Other Terms</h2>
             
-            <h3>13.1 Entire Agreement</h3>
+            <h3>12.1 Entire Agreement</h3>
             <p>These Terms constitute the entire agreement between you and us regarding the use of this app.</p>
 
-            <h3>13.2 Severability</h3>
+            <h3>12.2 Severability</h3>
             <p>If any provision of these Terms is deemed invalid or unenforceable, the remaining provisions shall remain in effect.</p>
 
-            <h3>13.3 Language</h3>
+            <h3>12.3 Language</h3>
             <p>These Terms are written in English. If there are other language versions, the English version shall prevail.</p>
         </div>
 
