--- a/website/index.html
+++ b/website/index.html
@@ -3,106 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lumea - Mindfulness Meditation, Return to the Present</title>
+    <title>Lumea - Mindfulness Meditation App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.jpeg" alt="Lumea" class="logo">
             <h1>Lumea</h1>
-            <p class="tagline">Mindfulness Meditation, Return to the Present</p>
+            <p class="tagline">Find Your Inner Peace Through Mindfulness</p>
         </header>
 
         <main>
-            <!-- Brand Story -->
-            <section class="story">
-                <div class="story-item">
-                    <div class="story-number">01</div>
-                    <h2>The Problem We See</h2>
-                    <p>In this age of information overload, our attention is constantly fought over by countless apps. Short videos, social media, instant messaging... they're meticulously designed to be irresistible.</p>
-                    <p>We find ourselves increasingly unable to focus, increasingly anxious. Our brains are exhausted from high dopamine stimulation, and our psychological stability gradually crumbles.</p>
-                </div>
-
-                <div class="story-item">
-                    <div class="story-number">02</div>
-                    <h2>Our Thinking</h2>
-                    <p>The problem isn't technology itself, but that we've lost connection with our inner selves.</p>
-                    <p>We need an "anchor," a tool that can help us return to the present and rebuild psychological stability. Not to escape the digital world, but to find balance within it.</p>
-                </div>
-
-                <div class="story-item">
-                    <div class="story-number">03</div>
-                    <h2>The Birth of Lumea</h2>
-                    <p>Lumea means "a clear realm of the mind."</p>
-                    <p>We've created a fluid light sphere that changes with your mental state—when you're stable, it breathes calmly; when you're anxious, it fluctuates violently. It's a mirror of your inner self.</p>
-                    <p>Through four mindfulness practices, you can gradually build psychological stability, combat cognitive load, and regain control of your attention.</p>
-                </div>
-
-                <div class="story-item">
-                    <div class="story-number">04</div>
-                    <h2>Our Mission</h2>
-                    <p>To help everyone find inner peace and strength in the digital age.</p>
-                    <p>Not to make you give up your phone, but to make you the master of your own attention.</p>
-                </div>
+            <section class="hero">
+                <h2>Reclaim Your Attention in the Digital Age</h2>
+                <p>Lumea helps you build psychological stability and combat digital distractions through guided mindfulness practices.</p>
             </section>
 
-            <!-- App Preview -->
             <section class="features">
                 <h2>Core Features</h2>
                 
                 <div class="feature-grid">
                     <div class="feature-card">
                         <div class="feature-icon">🧘</div>
-                        <h3>Meditation Practice</h3>
-                        <p>Guided meditation with soothing music to help you find inner peace</p>
+                        <h3>Meditation</h3>
+                        <p>Guided meditation sessions with calming music to help you find inner peace and reduce stress.</p>
                     </div>
 
                     <div class="feature-card">
                         <div class="feature-icon">🎯</div>
                         <h3>Touch Anchor</h3>
-                        <p>Rebuild sensory connection through touch, resist impulse</p>
+                        <p>Rebuild sensory connection and resist impulses through focused touch exercises.</p>
                     </div>
 
                     <div class="feature-card">
                         <div class="feature-icon">⚡</div>
                         <h3>Flow Forging</h3>
-                        <p>Deep focus practice to restore attention and thinking ability</p>
+                        <p>Deep focus practice to restore your attention span and enhance cognitive abilities.</p>
                     </div>
 
                     <div class="feature-card">
                         <div class="feature-icon">💫</div>
                         <h3>Emotion Photolysis</h3>
-                        <p>Visualize and release emotional burden, achieve psychological separation</p>
+                        <p>Visualize and release emotional burdens through voice journaling and guided exercises.</p>
                     </div>
 
                     <div class="feature-card">
                         <div class="feature-icon">📊</div>
                         <h3>Stability Tracking</h3>
-                        <p>Real-time tracking of your psychological stability value</p>
+                        <p>Monitor your psychological stability value and track your progress over time.</p>
                     </div>
 
                     <div class="feature-card">
                         <div class="feature-icon">🧠</div>
                         <h3>Cognitive Load Index</h3>
-                        <p>Quantify the impact of digital distractions on your mental state</p>
+                        <p>Measure the impact of digital distractions on your mental state and well-being.</p>
                     </div>
                 </div>
             </section>
 
-            <!-- Download -->
+            <section class="visual-feedback">
+                <h2>Your Mind, Visualized</h2>
+                <p>Experience a unique fluid light sphere that reflects your mental state in real-time. When you're calm, it breathes gently. When you're anxious, it fluctuates intensely. It's a mirror of your inner self.</p>
+            </section>
+
             <section class="download">
                 <h2>Download Lumea</h2>
-                <p>Available on iOS, start your mindfulness journey</p>
+                <p>Available on iOS. Start your mindfulness journey today.</p>
                 <a href="https://apps.apple.com/app/lumea" class="download-button" target="_blank">
-                    <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" alt="Download on the App Store">
+                    Download on the App Store
                 </a>
             </section>
 
-            <!-- Contact -->
             <section class="contact">
-                <h2>Contact Us</h2>
-                <p>Questions or suggestions? We'd love to hear from you</p>
+                <h2>Get in Touch</h2>
+                <p>Have questions or feedback? We'd love to hear from you.</p>
                 <p>Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
             </section>
         </main>
