Update website: App Store compliant Privacy Policy and Terms of Service
- Added developer contact information (email and address)
- Removed Screen Time data collection references
- Added GDPR compliance for EU users
- Added CCPA compliance for California users
- Enhanced subscription terms and refund policy
- Added comprehensive medical disclaimer
- Added Apple-specific terms for iOS apps
- Created website README documentation

--- a/website/index.html
+++ b/website/index.html
@@ -77,7 +77,7 @@
             <section class="contact">
                 <h2>Get in Touch</h2>
                 <p>Have questions or feedback? We'd love to hear from you.</p>
-                <p>Email: <a href="mailto:support@lumea.app">support@lumea.app</a></p>
+                <p>Email: <a href="mailto:2945235656@qq.com">2945235656@qq.com</a></p>
             </section>
         </main>
 
