--- a/website/privacy.html
+++ b/website/privacy.html
@@ -20,7 +20,7 @@
 
             <h2>Developer Information</h2>
             <p><strong>Developer:</strong> Independent Developer</p>
-            <p><strong>Contact Email:</strong> <a href="mailto:2945235656@qq.com">2945235656@qq.com</a></p>
+            <p><strong>Contact Email:</strong> <a href="mailto:lihongyangnju@gmail.com">lihongyangnju@gmail.com</a></p>
             <p><strong>Address:</strong> No. 163 Xianlin Avenue, Qixia District, Nanjing, Jiangsu Province, China</p>
 
             <h2>1. Information Collection</h2>
@@ -131,7 +131,7 @@
                 <li>Opt-out of the sale of personal information (we do not sell personal information)</li>
                 <li>Non-discrimination for exercising your privacy rights</li>
             </ul>
-            <p>To exercise these rights, contact us at <a href="mailto:2945235656@qq.com">2945235656@qq.com</a>.</p>
+            <p>To exercise these rights, contact us at <a href="mailto:lihongyangnju@gmail.com">lihongyangnju@gmail.com</a>.</p>
 
             <h2>9. Data Retention</h2>
             <p>Your data will remain on your device until you delete the app or clear the data. After deleting the app, all local data will be permanently deleted.</p>
