--- a/website/terms.html
+++ b/website/terms.html
@@ -20,7 +20,7 @@
 
             <h2>Developer Information</h2>
             <p><strong>Developer:</strong> Independent Developer</p>
-            <p><strong>Contact Email:</strong> <a href="mailto:2945235656@qq.com">2945235656@qq.com</a></p>
+            <p><strong>Contact Email:</strong> <a href="mailto:lihongyangnju@gmail.com">lihongyangnju@gmail.com</a></p>
             <p><strong>Address:</strong> No. 163 Xianlin Avenue, Qixia District, Nanjing, Jiangsu Province, China</p>
 
             <h2>1. Acceptance of Terms</h2>
