--- a/website/privacy.html
+++ b/website/privacy.html
@@ -141,7 +141,7 @@
 
             <h2>10. Contact Us</h2>
             <p>If you have any questions, comments, or suggestions about this Privacy Policy, please contact us:</p>
-            <p>Email: <a href="mailto:2945235656@qq.com">2945235656@qq.com</a></p>
+            <p>Email: <a href="mailto:lihongyangnju@gmail.com">lihongyangnju@gmail.com</a></p>
 
             <h2>11. Governing Law</h2>
             <p>This Privacy Policy is governed by the laws of the United States of America.</p>
