--- a/website/terms.html
+++ b/website/terms.html
@@ -184,7 +184,7 @@
 
             <h2>11. Contact Us</h2>
             <p>If you have any questions about these Terms, please contact us:</p>
-            <p>Email: <a href="mailto:2945235656@qq.com">2945235656@qq.com</a></p>
+            <p>Email: <a href="mailto:lihongyangnju@gmail.com">lihongyangnju@gmail.com</a></p>
 
             <h2>14. Miscellaneous</h2>
             
