--- a/website/index.html
+++ b/website/index.html
@@ -11,20 +11,20 @@
 <body>
     <!-- Video Carousel Background -->
     <div class="video-carousel">
-        <video class="bg-video active" autoplay muted loop playsinline preload="auto">
-            <source src="videos/森林.mp4" type="video/mp4">
+        <video class="bg-video active" autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/森林.mp4" type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="videos/大海.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/大海.mp4" type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="videos/深海.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/深海.mp4" type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="videos/秋叶.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/秋叶.mp4" type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="videos/雾山.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/雾山.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
