Fix video filenames: use English names to avoid GitHub Release upload issues
- Rename videos from Chinese to English filenames
- 森林.mp4 -> forest.mp4
- 大海.mp4 -> ocean.mp4
- 深海.mp4 -> deep-sea.mp4
- 秋叶.mp4 -> autumn.mp4
- 雾山.mp4 -> misty-mountain.mp4
- Fixes GitHub's default.mp4 renaming issue with Chinese filenames

--- a/website/index.html
+++ b/website/index.html
@@ -12,19 +12,24 @@
     <!-- Video Carousel Background -->
     <div class="video-carousel">
         <video class="bg-video active" autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/森林.mp4" type="video/mp4">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/forest.mp4"
+                type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/大海.mp4" type="video/mp4">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/ocean.mp4"
+                type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/深海.mp4" type="video/mp4">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/deep-sea.mp4"
+                type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/秋叶.mp4" type="video/mp4">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/autumn.mp4"
+                type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/雾山.mp4" type="video/mp4">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/misty-mountain.mp4"
+                type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
