Trigger Vercel redeployment - 2025-12-05

--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumea - Mindfulness Meditation App</title>
+    <!-- Deployment: 2025-12-05 09:45 -->
     <link rel="stylesheet" href="style.css">
 </head>
 
