Fix deployment: copy website files to root directory
- Vercel was deploying old root index.html with Chinese filenames
- Copied updated files from website/ to root
- Now using GitHub Release URLs with English filenames
- This should fix the video background display issue

--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumea - Mindfulness Meditation App</title>
+    <!-- Deployment: 2025-12-05 09:45 -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Video Carousel Background -->
     <div class="video-carousel">
-        <video class="bg-video active" autoplay muted loop playsinline>
-            <source src="视频背景/森林.mp4" type="video/mp4">
+        <video class="bg-video active" autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/forest.mp4"
+                type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="视频背景/大海.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/ocean.mp4"
+                type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="视频背景/深海.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/deep-sea.mp4"
+                type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="视频背景/秋叶.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/autumn.mp4"
+                type="video/mp4">
         </video>
-        <video class="bg-video" autoplay muted loop playsinline>
-            <source src="视频背景/雾山.mp4" type="video/mp4">
+        <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
+            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/misty-mountain.mp4"
+                type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
