Add compressed videos and use jsDelivr CDN for streaming
- Compressed ocean.mp4 from 120MB to 61MB (CRF 25, high quality)
- All other videos kept original quality (<100MB each)
- Total: 269MB across 5 videos
- Using jsDelivr CDN for proper video streaming
- Videos load from: cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <!-- Video Carousel Background -->
     <div class="video-carousel">
         <video class="bg-video active" autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/forest.mp4"
+            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/forest.mp4"
                 type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/ocean.mp4"
+            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/ocean.mp4"
                 type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/deep-sea.mp4"
+            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/deep-sea.mp4"
                 type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/autumn.mp4"
+            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/autumn.mp4"
                 type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://github.com/Mercury-nju/chengyu/releases/download/v1.0-videos/misty-mountain.mp4"
+            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/misty-mountain.mp4"
                 type="video/mp4">
         </video>
         <div class="video-overlay"></div>
