--- a/index.html
+++ b/index.html
@@ -13,24 +13,19 @@
     <!-- Video Carousel Background -->
     <div class="video-carousel">
         <video class="bg-video active" autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
-            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/forest.mp4"
-                type="video/mp4">
+            <source src="https://pub-6d02e090aafe40fd92dba030430174b3.r2.dev/forest.mp4" type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/ocean.mp4"
-                type="video/mp4">
+            <source src="https://pub-6d02e090aafe40fd92dba030430174b3.r2.dev/ocean.mp4" type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/deep-sea.mp4"
-                type="video/mp4">
+            <source src="https://pub-6d02e090aafe40fd92dba030430174b3.r2.dev/deep-sea.mp4" type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/autumn.mp4"
-                type="video/mp4">
+            <source src="https://pub-6d02e090aafe40fd92dba030430174b3.r2.dev/autumn.mp4" type="video/mp4">
         </video>
         <video class="bg-video" autoplay muted loop playsinline crossorigin="anonymous">
-            <source src="https://cdn.jsdelivr.net/gh/Mercury-nju/chengyu@main/videos_compressed/misty-mountain.mp4"
-                type="video/mp4">
+            <source src="https://pub-6d02e090aafe40fd92dba030430174b3.r2.dev/misty-mountain.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
